feat.(boilerplate): modify boilerplate to add linting packages. - add .eslintrc.yml as the config file for linting. - modify package-lock.json while installing eslint and related dependencies. - modify package.json while installing eslint and related dependencies.

--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
   "homepage": "https://github.com/sudhanshu-chauhan/node-app-boilerplate#readme",
   "dependencies": {
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.1"
   }
 }
