feat.(boilerplate): modify boilerplate to add user model routes and controllers. - modify .gitignore to add local IDE config directory. - add controllers/user.js as controller for user model. - modify package.json to add body parser and other packages. - add routes/index.js to define REST api routes.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/sudhanshu-chauhan/node-app-boilerplate#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.5.2"
   },
