--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A boilterplate application for nodejs with different re-usable components",
   "main": "index.js",
   "scripts": {
+    "start": "./node_modules/.bin/pm2 start ./bin/www",
+    "stop": "./node_modules/.bin/pm2 stop www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,7 +26,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "mongoose": "^5.5.2"
+    "mongoose": "^5.5.3",
+    "pm2": "^3.5.0"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
