feat.(boilerplate): modify boilerplate to add password field to user. - modify controllers/user.js to add password field. - modify mongoose/user.js to add password field with pre save middleware for hash generation. - modify package.json to add bcrypt package. - modify package-lock.json to add bcrypt package.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "./node_modules/.bin/pm2 start ./bin/www",
     "stop": "./node_modules/.bin/pm2 stop www",
-	"lint": "./node_modules/.bin/eslint .",
+    "lint": "./node_modules/.bin/eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/sudhanshu-chauhan/node-app-boilerplate#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.5.3",
