--- a/package.json
+++ b/package.json
@@ -27,9 +27,15 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
     "express": "^4.16.4",
+    "mocha": "^6.1.4",
     "mongoose": "^5.5.3",
-    "pm2": "^3.5.0"
+    "nock": "^10.0.6",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "pm2": "^3.5.0",
+    "sinon": "^7.3.2"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
