feat.(backend): modify backend to add auth middleware. - add middlewares/auth.js for authorizing requests with tokens. - modify mongoose/user.js to add generate token and validate password methods. - modify node-app-bp-postman-coll.json to add password field for user create endpoint. - modify package.json to add jsonwetoken module. - modify packageg-lock.json to add module inter-dependencies. - modify routes/index.js to add authorization in user endpoint.

--- a/node-app-bp-postman-coll.json
+++ b/node-app-bp-postman-coll.json
@@ -34,6 +34,11 @@
 							"key": "email",
 							"value": "mailbox.sud@gmail.com",
 							"type": "text"
+						},
+						{
+							"key":"password",
+							"value": "aisekaise",
+							"type": "text"
 						}
 					]
 				},
