--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^6.1.4",
     "mongoose": "^5.5.3",
     "newman": "^4.5.0",
