--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
+    "convict": "^5.0.0",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.1.4",
