--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.1.4",
     "mongoose": "^5.5.3",
+    "multer": "^1.4.1",
     "newman": "^4.5.0",
     "nock": "^10.0.6",
     "passport": "^0.4.0",
