--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,6 +1,13 @@
 name: Node CI
 
-on: [push]
+on:
+  push:
+    branches:
+      - master
+      - develop
+      - feat./
+      - fix/
+      - chores/
 
 jobs:
   build:
