--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A boilterplate application for nodejs with different re-usable components",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/.bin/pm2 start --no-daemon ./bin/www",
+    "start": "./node_modules/.bin/pm2 start ./bin/www",
     "stop": "./node_modules/.bin/pm2 stop www",
     "lint": "./node_modules/.bin/eslint .",
     "newman": "./node_modules/.bin/newman --environment ./node-app-bp-postman-env.json run ./node-app-bp-postman-coll.json",
